<resources>
    <string name="app_name">Faircorp</string>
    <string name="app_logo_description">Faircorp logo</string>

    <string name="act_main_windowname_hint">Window Name</string>
    <string name="act_main_welcome">Welcome on faircorp,\n the app to manage building windows</string>
    <string name="act_main_open_window">Open window</string>

    <!-- MENU -->
    <string name="menu_rooms">Building rooms</string>
    <string name="menu_windows">Building windows</string>
    <string name="menu_website">Our website</string>
    <string name="menu_email">Send us an email</string>

    <!-- Window Activity -->
    <string name="act_window_name">Window name</string>
    <string name="act_window_room">Room</string>
    <string name="act_window_room_target_temp">Target room temperature</string>
    <string name="act_window_room_current_temp">Current room temperature</string>
    <string name="act_window_status">Status</string>

    <!-- Room Activity -->
    <string name="act_room_name">Room name</string>
    <string name="act_room_floor">Floor</string>
    <string name="act_room_building">Building</string>
    <string name="act_room_target_temp">Target room temperature</string>
    <string name="act_room_current_temp">Current room temperature</string>
    <string name="act_room_window_list">Windows</string>


</resources>